@startuml
'https://plantuml.com/class-diagram

class HoaDon{
# HoaDon(Builder b)
}
class Builder{
+ HoaDon build()
+ Builder addCTHD(String sp, int sl, double dg, double chietKhau)
+ Builder buildHeader(String hdId, String ngayBan, String kh)

}
class HoaDonHeader{}
class CTHD{}
Builder ..> HoaDon
HoaDon *--> HoaDonHeader: header
HoaDon *--> CTHD: cthds
Builder --> HoaDonHeader: header
Builder *--> CTHD: cthds
@enduml